# epeg

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  INSTALL  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  configure.in  epeg-uninstalled.pc.in  epeg.c.in  epeg.pc.in  epeg.spec  epeg.spec.in  gendoc
debian/: changelog  changelog.in  control  copyright  epeg0-bin.install  libepeg0-dev.install  rules
src/: Makefile.am  Makefile.in
src/lib/: Epeg.h  Makefile.am  Makefile.in  epeg_main.c  epeg_private.h
